--- a/hamburg-vue2/package.json
+++ b/hamburg-vue2/package.json
@@ -12,6 +12,7 @@
     "@antv/x6-plugin-dnd": "^2.1.1",
     "@antv/x6-plugin-stencil": "^2.1.5",
     "core-js": "^3.8.3",
+    "element-ui": "^2.15.14",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2"
