--- a/desk/package.json
+++ b/desk/package.json
@@ -9,13 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "desk": "file:",
     "pinia": "^2.1.7",
-    "view-ui-plus": "^1.3.19",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.5",
+    "sass-embedded": "^1.79.2",
     "vite": "^5.3.1"
   }
 }
