--- a/desk/package.json
+++ b/desk/package.json
@@ -12,12 +12,13 @@
     "desk": "file:",
     "lottie-web": "^5.12.2",
     "pinia": "^2.1.7",
+    "three": "^0.148.0",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.5",
     "sass-embedded": "^1.79.2",
-    "vite": "^5.3.1"
+    "vite": "^5.4.7"
   }
 }
