--- a/desk/package.json
+++ b/desk/package.json
@@ -9,11 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "aframe": "^1.6.0",
     "desk": "file:",
     "lottie-web": "^5.12.2",
     "pinia": "^2.1.7",
     "three": "^0.148.0",
+    "three-orbitcontrols": "^2.110.3",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3"
   },
