--- a/desk/package.json
+++ b/desk/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "desk": "file:",
     "echarts": "^5.5.1",
+    "element-plus": "^2.9.5",
     "pinia": "^2.1.7",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3"
@@ -18,6 +19,8 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.5",
     "sass-embedded": "^1.79.2",
+    "unplugin-auto-import": "^19.1.1",
+    "unplugin-vue-components": "^28.4.1",
     "vite": "^5.4.7"
   }
 }
