--- a/desk/package.json
+++ b/desk/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite build", 
+    "build:github-build": "vite build --mode github", 
     "preview": "vite preview"
   },
   "dependencies": {
